# russell

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-wasm.yml  make-release.yml
examples/: absorption_laws_1.rsl  absorption_laws_2.rsl  contrapositive.rsl  de_morgans_1.rsl  de_morgans_2.rsl  distributive_law_1.rsl  distributive_law_2.rsl  double_negation.rsl  implication.rsl
russell/: Cargo.toml
russell/src/: main.rs
russell_ast/: Cargo.toml
russell_ast/src/: lib.rs
russell_engine/: Cargo.toml
russell_engine/src/: lib.rs  wasm.rs
russell_parser/: Cargo.toml
russell_parser/src/: lib.rs
wasm/: package.json  russell_engine.d.ts  russell_engine.js  russell_engine_bg.wasm  russell_engine_bg.wasm.d.ts
